--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,7 +1,7 @@
 page-login {
 
   .login-content {
-    background: #56CA96;
+    background: #ba90dc;
 
     .logo-row {
       padding-top: 50px;
@@ -9,7 +9,7 @@ page-login {
     }
 
     .login-box {
-      background: #399F8B;
+      background: #6f32a1;
       padding: 20px 20px 0px 20px;
       margin-top: 30px;
     }
@@ -40,7 +40,7 @@ page-login {
     }
 
     .submit-btn {
-      background: #51CFB1;
+      background: #9656ca;
       border-radius: 30px !important;
       border: 1px solid #ffffff;
     }
