--- a/src/pages/logout/logout.scss
+++ b/src/pages/logout/logout.scss
@@ -1,3 +1,15 @@
 page-logout {
+    ion-content {
+        background: url('../assets/background.jpg');
+        background-size: cover;
+    }
 
+    ion-card, ion-card-content, ion-card-content p, .card, .card-md, .card-ios {
+        @include alpha-background-color(rgba(white, 0.6), white);
+    }
+
+    .logo-row {
+      padding-top: 50px;
+      padding-bottom: 20px;
+    }
 }
