--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,18 @@
 page-home {
+    ion-content {
+        background: url('../assets/background.jpg');
+        background-size: cover;
+    }
 
+    ion-card, ion-card-content, p, .card, .card-md, .card-ios, ion-item, .item, .item-md, .item-ios {
+        @include alpha-background-color(rgba(white, 0.6), white);
+    }
+
+    .logo-row {
+        margin-top: 20px;
+    }
+
+    ion-list {
+        padding-top: 15px;
+    }
 }
