--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,7 +1,11 @@
 page-login {
 
+  ion-content {
+    background: url('../assets/background.jpg');
+    background-size: cover;
+  }
+
   .login-content {
-    background: #ba90dc;
 
     .logo-row {
       padding-top: 50px;
@@ -9,7 +13,7 @@ page-login {
     }
 
     .login-box {
-      background: #6f32a1;
+      @include alpha-background-color(rgba(white, 0.6), white);
       padding: 20px 20px 0px 20px;
       margin-top: 30px;
     }
@@ -20,9 +24,7 @@ page-login {
     }
 
     ion-item {
-        border-radius: 30px !important;
         padding-left: 30px !important;
-        font-size: 0.9em;
         margin-bottom: 10px;
         border: 1px solid #ffffff;
         border-bottom: 0px !important;
@@ -40,17 +42,11 @@ page-login {
     }
 
     .submit-btn {
-      background: #9656ca;
-      border-radius: 30px !important;
       border: 1px solid #ffffff;
     }
 
-    .register-btn {
-      color: #ffffff;
-      font-size: 0.8em;
-    }
-
     .version {
+      margin-top: 20px;
       color: #ffffff;
       text-align: center;
       font-size: 0.6em;
