--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,10 +34,12 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  //primary:    #488aff,
+  primary:    #900C3F,
   secondary:  #32db64,
   danger:     #f53d3d,
-  light:      #f4f4f4,
+  //light:      #f4f4f4,
+  light:      rgba(white, 0.8),
   dark:       #222
 );
 
