--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -4,7 +4,7 @@ page-home {
         background-size: cover;
     }
 
-    ion-card, ion-card-content, p, .card, .card-md, .card-ios, ion-item, .item, .item-md, .item-ios {
+    ion-card, ion-card-content, p, .card, .card-md, .card-ios {
         @include alpha-background-color(rgba(white, 0.6), white);
     }
 
